# elfbsp

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Manifest.toml  Project.toml  README.md  elfbsp.cfg  typos.toml
.github/workflows/: main.yml
archive/glbsp/: CHANGES.txt
cmake/: CheckedFlags.cmake
data/: Eviternity II.csv  doom1.csv
docs/: binary_formats.md  changelog.md  command_line.md  compiling_locally.md  elfbsp_v1_0.md  format_history.md  special_effects.md  support.md
res/: io.github.elf-alchemist.elfbsp.Info.plist.in  io.github.elf-alchemist.elfbsp.desktop.in  io.github.elf-alchemist.elfbsp.manifest.xml.in  io.github.elf-alchemist.elfbsp.metainfo.xml.in  io.github.elf-alchemist.elfbsp.version.rc.in
scripts/: BSP_SplitCostPlot.jl
src/: blockmap.cpp  bsp.cpp  core.hpp  elfbsp.cpp  elfbsp.hpp  info.cpp  level.cpp  local.hpp  main.cpp  misc.cpp  node.cpp  parse.cpp  parse.hpp  polyobj.cpp  raw_def.hpp  reject.cpp  system.hpp  utility.cpp  utility.hpp  view.cpp  wad.cpp  wad.hpp
test/: doom_vanilla.wad  doom_vanilla_raw.wad
